# knowledge-base

./: .claudeignore  .cloreignore  .gitignore  .graphifyignore  CLAUDE.md  Features.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  setup.md  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  pages.yml
docs/: perf-analysis-2026-04-15.md
docs/superpowers/handoffs/: 2026-05-03-guitar-tabs.md  2026-05-05-diagram-flow-enhancements.md  2026-05-07-tauri-claude-integration.md  2026-05-10-test-cases-residual-followups.md
docs/superpowers/plans/: .mvp2-stream-json-capture.jsonl  2026-04-11-markdown-documents.md  2026-04-12-knowledge-base-restructure.md  2026-04-12-knowledge-base-skills.md  2026-04-13-document-readonly-toggle.md  2026-04-13-inline-syntax-reveal.md  2026-04-15-rawblock-backspace-merge.md  2026-04-15-rawreveal-in-table-cells.md  2026-04-16-table-floating-toolbar.md  2026-04-17-diagram-readonly-toggle.md  2026-04-17-pane-header-extraction.md  2026-04-17-vitest-rtl-playwright-setup.md  2026-04-18-coding-standards-phase-0-0p5.md  2026-04-18-coding-standards-phase-1p1-diagram-view.md  2026-04-18-coding-standards-phase-1p1b-canvas-subtree.md  2026-04-18-coding-standards-phase-1p2-markdown-editor.md  2026-04-18-coding-standards-phase-1p3-markdown-reveal.md  2026-04-18-coding-standards-phase-2-strategy-factory.md  2026-04-18-coding-standards-phase-3a-repositories.md  2026-04-20-shared-action-history.md  (+43 more)
e2e/: app.spec.ts  backlinksRail.spec.ts  commandPalette.spec.ts  command_palette.spec.ts  diagramAxe.spec.ts  diagramConnectionRendering.spec.ts  diagramGoldenPath.spec.ts  diagramKeyboard.spec.ts  diagramKeyboardNav.spec.ts  diagramKeyboardOnly.spec.ts  diagramMinimap.spec.ts  diagramReadOnly.spec.ts  diagram_palette_commands.spec.ts  documentDarkMode.spec.ts  documentDraftRestore.spec.ts  documentEditor.spec.ts  documentGoldenPath.spec.ts  documentImagePaste.spec.ts  documentReadOnly.spec.ts  document_create.spec.ts  dragToConnect.spec.ts  editorialReadMode.spec.ts  explorerSearch.spec.ts  explorer_folder_delete_attachment_cleanup.spec.ts  explorer_move_item.spec.ts  explorer_recents.spec.ts  explorer_search.spec.ts  exportMenu.spec.ts  fileExplorerOps.spec.ts  file_watcher_tree_update.spec.ts  firstRunHero.spec.ts  flowHighlight.spec.ts  focusTrap.spec.ts  fsMockSanity.spec.ts  goldenPath.spec.ts  graphView.spec.ts  linkIndexHydration.spec.ts  link_dirty_propagation.spec.ts  manifest_serving.spec.ts  mobileLayout.spec.ts  (+27 more)
e2e/fixtures/: fsMock.ts  tabFixtures.ts
e2e/helpers/: diagramSeeds.ts  launchApp.ts  tauriShim.ts  tempVault.ts
patches/: @coderline+alphatab+1.8.2.patch  @svgedit+svgcanvas+7.4.1.patch
public/: manifest.json  sw.js
public/sample-vault/: README.md  api-reference.md  architecture.md  design-decisions.md  manifest.json  roadmap.md  system-overview.json
scripts/: run-e2e.sh
skills/knowledge-base/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: env_bootstrap.rs  lib.rs  main.rs
src-tauri/src/claude/: commands.rs  crash.rs  mod.rs  parser.rs  runner.rs  status.rs  types.rs
src-tauri/src/settings/: commands.rs  mod.rs  store.rs
src-tauri/src/skill/: commands.rs  install.rs  mod.rs  types.rs
src-tauri/src/term/: commands.rs  mod.rs  pty.rs
src-tauri/src/test_server/: dispatch.rs  events.rs  mod.rs  router.rs  test_watcher.rs
src-tauri/src/test_support/: mod.rs  vault.rs
src-tauri/src/vault/: commands.rs  error.rs  io.rs  mod.rs  path.rs  watcher.rs
src-tauri/tests/: term_pty_integration.rs  term_vault_switch.rs  watcher_integration.rs  watcher_rename_paired.rs
src-tauri/tests/fixtures/vaults/with_attachments/: keep.md
src-tauri/tests/fixtures/vaults/with_attachments/.kb/: attachment-links.json
src-tauri/tests/fixtures/vaults/with_attachments/notes/: attached.alphatex  attached.kbjson  attached.md
src-tauri/tests/fixtures/vaults/with_links/: a.md  b.md
src-tauri/tests/fixtures/vaults/with_many_files/: f01.md  f02.md  f03.md  f04.md  f05.md  f06.md  f07.md  f08.md  f09.md  f10.md  f11.md  f12.md  f13.md  f14.md  f15.md
src-tauri/tests/fixtures/vaults/with_tab/: song.alphatex  untitled-no-title.alphatex
src/app/: globals.css  globals.print.css  layout.test.ts  layout.tsx  page.tsx
src/test/: setup.ts
test-cases/: 01-app-shell.md  02-file-system.md  03-diagram.md  04-document.md  05-links-and-graph.md  06-shared-hooks.md  06-svg-editor.md  07-persistence.md  08-search.md  09-export.md  10-first-run.md  11-search.md  11-tabs.md  12-claude-chat.md  13-skills.md  14-tabs.md  14-terminal.md  README.md
test/prose/: 06-search.md
(+855 files in other folders)
