[package]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge Base desktop app"
authors = ["Banchan Kiro A Sangma <bkirosangma@gmail.com>"]
edition = "2021"

[lib]
name = "knowledge_base_lib"
path = "src/lib.rs"

[[bin]]
name = "knowledge-base"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync", "process", "time"] }
which = "6"
dirs = "5"
libc = "0.2"
# Exact pins: plan validated against these versions; bump deliberately in MVP-1d cleanup.
notify = "=6.1.1"
notify-debouncer-full = "=0.3.2"
tauri-plugin-store = "=2.4.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
