[package]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge Base desktop app"
authors = ["Banchan Kiro A Sangma <bkirosangma@gmail.com>"]
edition = "2021"

[lib]
name = "knowledge_base_lib"
path = "src/lib.rs"

[[bin]]
name = "knowledge-base"
path = "src/main.rs"

# Debug-only HTTP harness re-invoking production command bodies for
# Playwright e2e (MVP-4.x phase 3.C). Compiled in dev builds only — gated
# by `#[cfg(debug_assertions)]` on the `test_server` module declaration in
# `src/lib.rs`; never shipped in release bundles.
[[bin]]
name = "test_server"
path = "src/bin/test_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# axum + tower-http + tokio-stream + futures are the test_server bin's
# HTTP / SSE plumbing. Pulled into the lib's [dependencies] (rather than
# guarded under [target.'cfg(...)' / dev-dependencies]) because a `[[bin]]`
# target uses the same dep set as the rest of the crate; the test_server
# is debug-only via the `#[cfg(debug_assertions)]` module gate, not
# `[[bin]]` selection.
axum = "0.7"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync", "process", "time"] }
which = "6"
dirs = "5"
libc = "0.2"
# Exact pins: plan validated against these versions; bump deliberately in MVP-1d cleanup.
notify = "=6.1.1"
notify-debouncer-full = "=0.3.2"
portable-pty = "0.8"
tauri-plugin-store = "=2.4.3"
# Required at build time because the debug-only `test_support` module is
# compiled into dev binaries (gated by `cfg(debug_assertions)`, not
# `cfg(test)`); release builds don't reference it but the crate still
# resolves. Integration tests inherit this dep automatically — no duplicate
# entry under [dev-dependencies] is needed.
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
